# BetterSpotify

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: index.ts
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/components/player/: Player.tsx
src/components/ui/: AuthModal.tsx  Button.tsx  Input.tsx  SearchInput.tsx  TrackItem.tsx  index.ts
src/components/views/: SearchView.tsx
src/hooks/: index.ts  useSpotifyAuth.ts  useSpotifyPlayer.ts  useSpotifySearch.ts  useTauriEnvironment.ts
src/services/: index.ts  spotifyService.ts
src/store/: authStore.ts  index.ts  playerStore.ts
src/styles/: globals.css
src/types/: spotify.ts
src/utils/: environment.ts  index.ts
